--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,26 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+input[type='checkbox']:checked,
+input[type='checkbox']{
+  appearance: none;
+  border: 1px solid rgb(5, 204, 204);
+  width: 12px;
+  height: 12px;
+  position: relative;
+}
+
+input[type='checkbox']:checked:before{
+  appearance: none;
+  content: '\2713';
+  position: absolute;
+  transform: translate(0%,-35%);
+  color: rgb(5, 204, 204);
+}
+
+.starIcon{
+  content: '\2605';
+  width: 12px;
+  height: 12px;
+}
